Trying to fix overlapping tag problems

--- a/mycoplasma_home/static/css/menu.css
+++ b/mycoplasma_home/static/css/menu.css
@@ -56,7 +56,9 @@
 
 .toolbar-menu-icon {
 	display: inline-block;
-	margin-right: 5px;
+    height: 15px;
+    margin-right: 5px;
+    vertical-align: middle;
 }
 
 .toolbar-menu-text {
